tabs fix bug 397 button should align left with the example tab

--- a/src/assets/examples/tab-nav-bar-basic/tab-nav-bar-basic.component.css
+++ b/src/assets/examples/tab-nav-bar-basic/tab-nav-bar-basic.component.css
@@ -1,5 +1,7 @@
 .example-action-button {
   margin-bottom: 8px;
+  margin-left: 40px;
+  display: flex;
 }
 
 .mat-tab-nav-bar {
